added yml and de properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.profiles.active=es 
+spring.profiles.active=de
 guru.username=John
 guru.password=somepass
 guru.dburl=sdfasfdfsdfds
-guru.jms.username=JMS Username
-guru.jms.password=somepass
-guru.jms.url=SomeURL
+
